--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^11.2.12",
     "geist": "^1.3.0",
+    "lucide-react": "^0.456.0",
     "nanoid": "^5.0.7",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
@@ -47,6 +48,7 @@
     "remark-math": "^5.1.1",
     "sonner": "^1.5.0",
     "usehooks-ts": "^3.1.0",
+    "uuid": "^11.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
